[package]
name = "rgb-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
base64 = "0.21"
glob = "0.3"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "inscription-builder"
path = "src/bin/inscription-builder.rs"

[[bin]]
name = "rgb-scanner"
path = "src/bin/rgb-scanner.rs"
