[package]
name = "rgb-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
base64 = "0.21"
clap = { version = "4.5.1", features = ["derive"] }
glob = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
z85 = "3.0"
ascii85 = "0.2"
base85 = "2.0.0"

[[bin]]
name = "inscription-builder"
path = "src/bin/inscription-builder.rs"

[[bin]]
name = "rgb-scanner"
path = "src/bin/rgb-scanner.rs"
